# RapidResponseAgent

./: .env.example  .gitignore  README.md  requirements-dpo.txt  requirements.txt
geoagent/: README.md
knowledge/sops/: README.md  caloes_fire_rescue_mutual_aid_plan.md  (+15 more)
perception/: COMMERCIAL_LICENSING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
perception/checkpoints/: README.md
perception/configs/: inference.yaml
perception/scripts/: check_device.py  overlay_damage.py  predict.py
perception/vipde/: README.md
scripts/: README.md
tests/: test_answer_policy.py  test_answer_verifier.py  test_artifacts.py  test_assessment_session.py  test_assign_building_damage.py  test_building_footprints.py  test_building_scopes.py  test_case_label.py  test_chat_context.py  test_chat_graph.py  test_damage_levels.py  test_delete_assessment.py  test_hierarchical_router.py  test_historical_query.py  test_historical_rag.py  test_hitl_chat.py  test_intent_router.py  test_job_progress.py  test_job_queue.py  test_knowledge_rag.py  test_nearest_facilities.py  test_nearest_hospital.py  test_post_coverage.py  test_pre_imagery.py  test_preprocess_upload.py  test_python_env.py  test_registration.py  test_report_scopes.py  test_resolve_aoi_id.py  test_runtime_memory.py  test_runtime_planner.py  test_session_binding.py  test_session_guard.py  test_tool_rag_debug.py  test_tool_router.py  test_vlm_arbitrate.py  test_vlm_dpo_dataset.py  test_vlm_preferences.py  test_vlm_review_job.py  test_weather_context.py
web/: README.md  requirements.txt  run_api.sh
(+46 files in other folders)
