[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vipde"
version = "0.1.0"
description = "ViPDE: Visual Prompt Damage Evaluation framework for post-disaster building damage assessment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Fei Zhao", email = "zhaof.thu@gmail.com" }]
keywords = ["vipde", "damage-assessment", "segmentation", "sam", "remote-sensing", "disaster", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "Pillow>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vipde*"]
